# simple-turing

./: Cargo.toml  LICENSE  README.md
examples/: three_beavers.rs  trivial.rs  two_beavers.rs
src/: lib.rs  util.rs
src/computation/: default.rs  mod.rs
src/jet/: application.rs  mod.rs  turing.rs
src/machine/: mod.rs  three_beavers.rs  trivial.rs  two_beavers.rs
src/verifier/: mod.rs
